Styling bug fixed on mobile phone with ghostlab, the styling was different on an actual mobile device

--- a/src/components/DocumentList.scss
+++ b/src/components/DocumentList.scss
@@ -104,10 +104,6 @@
   margin: 5px;
 }
 
-.document-item__properties{
-  overflow: hidden;
-}
-
 .document-item__title__text{
   font-size: 1rem;
   font-weight: 600;
@@ -220,7 +216,7 @@
     box-shadow: 2px 2px 10px 0px rgba(109, 109, 109, 0.75);
     border-radius: 10px;
     justify-content: flex-start;
-    padding: 10px 15px;
+    padding: 15px 15px;
     background-color: #EFEFEF;
     height: auto;
   }
@@ -240,18 +236,27 @@
     font-size: 1rem;
     font-weight: 600;
     margin: 0px 0px;
+    height: 100%;
+    padding: 5px;
   }
 
   .document-item__properties{
     display: flex;
-    height: 100%;
+    height: auto;
     box-sizing: border-box;
     justify-content: flex-start;
+    padding: 5px;
+  }
+
+  .document-item__properties > p{
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding: 5px;
   }
 
   .document-item__description{
     padding: 10px;
-    height: 100%;
+    height: 70%;
   }
 
   .document-item__actions-box{
